infrastructure/terraform/modules/vpc/vpc.tf
resource "aws_vpc" "main" {
  cidr_block           = var.cidr
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = {
    Name        = "${var.environment}-bobo-vpc"
    Environment = var.environment
  }
}
